Removing some confidentital information

--- a/postgres-graph-test.ipynb
+++ b/postgres-graph-test.ipynb
@@ -19,7 +19,7 @@
    },
    "outputs": [],
    "source": [
-    "conn = psycopg2.connect(host=\"localhost\", dbname=\"testpython\", user=\"vaibhavs10\", password=\"v9811045972\")"
+    "conn = psycopg2.connect(host=\"localhost\", dbname=\"testpython\", user=\"vaibhavs10\", password=\"\")"
    ]
   },
   {
@@ -900,7 +900,7 @@
    },
    "outputs": [],
    "source": [
-    "conn = psycopg2.connect(host=\"localhost\", dbname=\"testpython\", user=\"vaibhavs10\", password=\"v9811045972\")\n",
+    "conn = psycopg2.connect(host=\"localhost\", dbname=\"testpython\", user=\"vaibhavs10\", password=\"\")\n",
     "c = conn.cursor()"
    ]
   },
