Adding misc changes

--- a/postgres-graph-test.ipynb
+++ b/postgres-graph-test.ipynb
@@ -894,13 +894,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "conn = psycopg2.connect(host=\"localhost\", dbname=\"testpython\", user=\"vaibhavs10\", password=\"\")\n",
+    "conn = psycopg2.connect(host=\"localhost\", dbname=\"testpython\", user=\"vaibhavs10\", password=\"v9811045972\")\n",
     "c = conn.cursor()"
    ]
   },
@@ -1207,7 +1207,7 @@
     "c.execute(\"WITH RECURSIVE traverse AS (\\\n",
     "SELECT employee_id FROM employees WHERE dependent_id = 4 \\\n",
     "UNION ALL \\\n",
-    "SELECT employees.employee_id FROM employees ) \\\n",
+    "SELECT employees.employee_id FROM employees WHERE  ) \\\n",
     "SELECT employee_id FROM traverse;\")"
    ]
   },
@@ -1235,9 +1235,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -1264,7 +1264,7 @@
        "[(1, 1), (6, 1), (2, 0), (26, 0)]"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1372,6 +1372,259 @@
    ],
    "source": [
     "nx.shortest_path(G, 1, 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ProgrammingError",
+     "evalue": "column \"join_date\" does not exist\nLINE 1: ...CURSIVE traverse AS ( (  (    SELECT employee_id, join_date ...\n                                                             ^\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mProgrammingError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-b95d729e2ce3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"WITH RECURSIVE traverse AS ( (  (    SELECT employee_id, join_date FROM employees    WHERE employees.employee_id = 4    UNION    SELECT employee_id, join_date FROM employee_detail)    )    UNION    SELECT traverse.employee_id, employee_detail.join_date    FROM traverse, employee_detail    WHERE employee_detail.employee_id = 2)    SELECT * FROM traverse;\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mProgrammingError\u001b[0m: column \"join_date\" does not exist\nLINE 1: ...CURSIVE traverse AS ( (  (    SELECT employee_id, join_date ...\n                                                             ^\n"
+     ]
+    }
+   ],
+   "source": [
+    "c.execute(\"WITH RECURSIVE traverse AS ( \\\n",
+    "( \\\n",
+    " ( \\\n",
+    "   SELECT employee_id FROM employees \\\n",
+    "   WHERE employees.employee_id = 4 \\\n",
+    "   UNION \\\n",
+    "   SELECT employee_id, join_date FROM employee_detail) \\\n",
+    "   ) \\\n",
+    "   UNION \\\n",
+    "   SELECT traverse.employee_id, employee_detail.join_date \\\n",
+    "   FROM traverse, employee_detail \\\n",
+    "   WHERE employee_detail.employee_id = 2) \\\n",
+    "   SELECT * FROM traverse;\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ProgrammingError",
+     "evalue": "column reference \"employee_id\" is ambiguous\nLINE 1: ... employees WHERE employee_id = 4 UNION ALL SELECT employee_i...\n                                                             ^\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mProgrammingError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-6ee4b152c1f6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"WITH RECURSIVE traverse AS ( SELECT employee_id, dependent_id,0 as depth FROM employees WHERE employee_id = 4 UNION ALL SELECT employee_id, dependent_id, traverse.depth + 1 as depth FROM employees INNER JOIN traverse ON traverse.employee_id = employees.dependent_id) SELECT * FROM traverse;\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mProgrammingError\u001b[0m: column reference \"employee_id\" is ambiguous\nLINE 1: ... employees WHERE employee_id = 4 UNION ALL SELECT employee_i...\n                                                             ^\n"
+     ]
+    }
+   ],
+   "source": [
+    "c.execute(\"WITH RECURSIVE traverse AS ( \\\n",
+    "SELECT employee_id, dependent_id,0 as depth \\\n",
+    "FROM employees \\\n",
+    "WHERE employee_id = 4 \\\n",
+    "UNION ALL \\\n",
+    "SELECT employee_id, dependent_id, traverse.depth + 1 as depth \\\n",
+    "FROM employees \\\n",
+    "INNER JOIN traverse \\\n",
+    "ON traverse.employee_id = employees.dependent_id) \\\n",
+    "SELECT * FROM traverse;\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# To get the whole tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "c.execute(\"WITH RECURSIVE traverse(employee_id, depth) AS ( \\\n",
+    "SELECT employee_id, 1 FROM employees \\\n",
+    "WHERE dependent_id IS NULL \\\n",
+    "UNION ALL \\\n",
+    "SELECT employees.employee_id, traverse.depth + 1 FROM employees \\\n",
+    "INNER JOIN traverse \\\n",
+    "ON employees.dependent_id = traverse.employee_id) \\\n",
+    "SELECT employee_id FROM traverse ORDER BY depth DESC;\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1,), (6,), (2,), (26,), (4,), (5,), (8,)]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-20-38180e939125>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-38180e939125>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    x = {relations = [(1, 2), (2, 3), (3, 4)],\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = {relations = [(1, 2), (2, 3), (3, 4)],\n",
+    "values = [(1, \"22/11/2014\"), (2, \"30/02/2016\"), (3, \"12/04/1993\"), (4, \"10/11/1995\")]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x['relations'] = [(1, 2), (2, 3), (3, 4)]\n",
+    "x['values'] = [(1, \"22/11/2014\"), (2, \"30/02/2016\"), (3, \"12/04/1993\"), (4, \"10/11/1995\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'relations': [(1, 2), (2, 3), (3, 4)],\n",
+       " 'values': [(1, '22/11/2014'),\n",
+       "  (2, '30/02/2016'),\n",
+       "  (3, '12/04/1993'),\n",
+       "  (4, '10/11/1995')]}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 2), (2, 3), (3, 4)]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x['relations']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-40-1ae75c28907a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 0"
+     ]
+    }
+   ],
+   "source": [
+    "x[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "IntegrityError",
+     "evalue": "duplicate key value violates unique constraint \"employees_pkey\"\nDETAIL:  Key (employee_id)=(1) already exists.\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIntegrityError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-41-4d7a4f403d76>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'relations'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"INSERT INTO employees VALUES %s\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIntegrityError\u001b[0m: duplicate key value violates unique constraint \"employees_pkey\"\nDETAIL:  Key (employee_id)=(1) already exists.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in x['relations']:\n",
+    "    c.execute(\"INSERT INTO employees VALUES %s\", (x,))"
    ]
   },
   {
